// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary component with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </p>
</div>
`;

exports[`should render ExpenseSummary component with no expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;
